src/index.css
@font-face {
  font-family: "Google Sans";
  src: url("//fonts.gstatic.com/s/googlesans/v58/4Ua_rENHsxJlGDuGo1OIlJfC6l_24rlCK1Yo_Iqcsih3SAyH6cAwhX9RFD48TE63OOYKtrwEIKln.woff2"),
  url("//fonts.gstatic.com/s/googlesans/v58/4Ua_rENHsxJlGDuGo1OIlJfC6l_24rlCK1Yo_Iqcsih3SAyH6cAwhX9RFD48TE63OOYKtrwEIKln.woff2");
  font-weight: 400;
  font-style: normal;
}

:root {
  --color-primary: #ff6a55;
  --color-secondary: #fdf6f4;
  --color-tertiary: #fefcfd;

  --color-text-dark: #010101;
  --color-text-light: #FFF2ED;

  --color-black: #000;
  --color-white: #fff;
  --color-grey-light: #cdcdcd;

}

::selection {
  background-color: var(--color-primary);
  color: var(--color-text-dark);
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  font-size: 62.5%;

  @media only screen and (max-width: 50em) {
    font-size: 50%
  }

  @media only screen and (max-width: 37.5em) {
    font-size: 37.5%
  }
}

body {
  font-family: Google Sans, sans-serif;
  font-size: 1.8rem;
  font-weight: 400;
  line-height: 1.6;
  box-sizing: border-box;
  color: var(--color-text-dark);
  background-color: var(--color-secondary);

  height: 120dvh;
  display: flex;
  align-items: center;
  justify-content: center;
}

@keyframes dialog-fade-in {
  0% {
    translate: -100%;
    scale: 0;
    transform: skew(-5deg, 5deg);
  }

  40% {
    transform: skew(0deg);
    translate: 5%;
    scale: 1.03;
  }

  100% {
    translate: 0;
    scale: 1;
  }
}

@keyframes checkmark-fade-in {
  0% {
    scale: 0;
  }

  100% {
    scale: 1;
  }
}

@keyframes checkmark-fade-out {
  0% {
    background-color: black;
    scale: 0;
  }

  100% {
    background-color: transparent;
    scale: 1;
  }
}

@keyframes checkmark-small-rect-fade-in {
  0% {
    height: 0;
  }

  100% {
  }
}

@keyframes checkmark-large-rect-fade-in {
  0% {
    height: 0;
  }

  60% {
    height: 0;
    translate: -25% 25%;
  }

  100% {
    translate: 0;
  }
}

@keyframes strike-fade-in {
  0% {
    transform: scaleX(0);
  }

  100% {
    transform: scaleX(1);
  }
}

@keyframes strike-fade-out {
  0% {
    transform: scaleX(1);
  }

  100% {
    transform: scaleX(0);
  }
}

@keyframes to-do-deleted {
  0% {
    opacity: 1;
  }

  100% {
    translate: -100% 0;
    opacity: 0;
  }
}

@keyframes fade-in-edit-todo {
  0% {
    scale: 0;
  }

  40% {
    scale:0
  }

  100% {
    scale: 1;
  }
}

@keyframes fade-in-delete-todo {
  0% {
    scale: 0;
  }

  80% {
    scale:0
  }

  100% {
    scale: 1;
  }
}

@keyframes sort-btn-click1 {
  0% {
    translate: 0;
  }

  50% {
    translate: 0 -5%;
  }

  100% {
    translate: 0;
  }
}

@keyframes sort-btn-click2 {
  0% {
    translate: 0;
  }

  50% {
    translate: 0 5%;
  }

  100% {
    translate: 0;
  }
}

.sort-btn {
  width: 3.4rem;
  height: 2.9rem;
}

.sort-btn--active .sort-btn__first-arrow {
  animation: sort-btn-click1 .3s;
}

.sort-btn--active .sort-btn__second-arrow {
  animation: sort-btn-click2 .3s;
}

.strike {
  position: relative;

  &:before {
    content: '';
    display: block;

    position: absolute;
    inset: 0;
    margin: auto;

    height: .2rem;
    transform: scaleX(1);

    background-color: black;
    animation: strike-fade-in .2s cubic-bezier(.3,.18,.22,1.2);
    transform-origin: left;
  }
}

.hidden {
  opacity: 0;
  visibility: hidden;
}

.hidden--list {
  position: fixed;
}

.title {
  font-size: 2rem;
  font-family: inherit;
  font-weight: 700;
}

.button {
  cursor: pointer;
  border: none;
  background-color: transparent;
  color: inherit;
}

.button--add {
  display: flex;
  align-items: center;
  gap: .5rem;
  fill: var(--color-grey-light);;
  color: var(--color-grey-light);
}

.button--add__icon {
  width: 2.4rem;
  height: 2.4rem;
}

.input-placeholder {
  &::placeholder {
    color: var(--color-grey-light);
    font-weight: 600;
  }
}

.input,
.heading {
  border-radius: 1.5rem;
  padding: 2rem 3rem;
  min-height: 7.2rem;
}

.dialog {
  display: grid;
  align-items: center;
  animation: dialog-fade-in .5s cubic-bezier(.09,.28,.11,1);

  color: var(--color-text-dark);
  background-color: color-mix(in srgb, var(--color-secondary), #000 5%);

  min-width: 12rem;
  min-height: 3.5rem;

  border-radius: 10rem;
  overflow: hidden;

  position: absolute;
  top: 0;
  right: -13rem;
  z-index: 10;

  transform-origin: right;

  @media only screen and (max-width: 37.5em) {
    right: 0;
    top: -3rem;
  }

  .dialog__option {
    display: block;
    font-size: 1.7rem;
    width: 100%;
    height: 100%;

    &:hover {
      background-color: rgba(0,0,0,.1);
    }
  }
}

.app {
  display: grid;
  row-gap: 2rem;
  margin: 0 auto;
  min-width: 50dvw;

  @media only screen and (max-width: 50em) {
    min-width: 70dvw;
  }

  @media only screen and (max-width: 37.5em) {
    min-width: 90dvw;
  }
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 1rem;
}

.main {
  display: grid;
  grid-template-columns: 100%;
  justify-content: center;
  row-gap: 1.2rem;

  .empty-list {
    color: var(--color-grey-light);
    justify-self: center;
    margin-top: 5rem;
  }

  .form-add-todo {
    position: relative;

    .input {
      border: none;

      width: 100%;
      outline: none;

      &::placeholder {
        color: var(--color-grey-light);
      }
    }

    .form-add-todo__btn {
      position: absolute;
      top: 50%;
      translate: 0 -50%;
      right: 3.1rem;
    }
  }

  .lists {
    display: grid;
    row-gap: inherit;

    .item {
      position: relative;
      display: grid;
      grid-template-rows: 0fr 0fr 0fr;
      list-style: none;
      cursor: pointer;
      transition: all .3s cubic-bezier(.21,.62,.31,.92);

      .heading {
        position: relative;
        display: flex;
        background-color: var(--color-tertiary);

        .heading__edit-title {
          display: inline-block;
          font: inherit;
          border: none;
          background-color: inherit;
          color: inherit;
          outline: none;
        }

        .heading__num-of-todos {
          color: var(--color-grey-light);
          font-weight: 400;
          margin-left: 2rem;
        }

        .heading__more-btn {
          align-self: start;
          margin-left: auto;
          font-size: 3.5rem;
          line-height: 1.5rem;
        }
      }

      .active {
        background-color: var(--color-primary);
        color: var(--color-text-light);

        .heading__num-of-todos {
          color: inherit;
        }
      }
    }

    .item--active {
      grid-template-rows: 0fr 1fr 0fr;
    }

    .todo-list {
      display: grid;
      gap: 1.5rem;
      padding: 2rem 3rem 0 3rem;
      transition: opacity .1s, visibility .1s;
      overflow: hidden;

      .todo-list__item {
        position: relative;
        display: flex;
        align-items: center;
        gap: 1rem;
        font-weight: 400;
        list-style: none;
        cursor: auto;

        .todo-list__item__delete {
          margin-left: auto;
          animation: fade-in-delete-todo .6s cubic-bezier(.21,.62,.34,1.98);
        }

        .todo-list__item__edit {
          position: absolute;
          left: 4.8rem;
          border: none;
          background-color: inherit;
          font: inherit;
          outline: none;

          animation: fade-in-edit-todo .5s cubic-bezier(.21,.62,.34,1.28);
        }

        .todo-list__item__content {
          position: relative;

          &:not(.strike) {
            &:before {
              content: '';
              display: block;

              position: absolute;
              inset: 0;
              margin: auto;

              height: .2rem;
              transform: scaleX(0);

              background-color: black;
              animation: strike-fade-out .2s cubic-bezier(.15,.88,.21,.98);
              transform-origin: left;
            }
          }
        }
      }

      .todo-list__item--deleted {
        animation: to-do-deleted .5s cubic-bezier(.25,.84,.47,1.02);
      }

      .todo-list__btn {
        max-height: 3.8rem;
      }

      .todo-list__icon,
      .todo-list__icon--done {
        border-radius: 10rem;
        width: 3.8rem;
        height: 3.8rem;
      }

      .todo-list__icon {
        fill: none;
        border: .3rem solid var(--color-grey-light);
        animation: checkmark-fade-out .3s cubic-bezier(.21,.62,.34,1.28);
      }

      .todo-list__icon--done {
        border: none;
        animation: checkmark-fade-in .3s cubic-bezier(.21,.62,.34,1.28);

        .todo-list__icon__body {
          fill: var(--color-black);
        }

        .todo-list__icon__large-rect {
          transition: .2s all cubic-bezier(.21, .62, .34, 1.68);
        }

        .todo-list__icon__small-rect {
          fill: var(--color-white);
          animation: checkmark-small-rect-fade-in .3s cubic-bezier(.21,.62,.34,1.28);
        }

        .todo-list__icon__large-rect {
          fill: var(--color-white);
          animation: checkmark-large-rect-fade-in .45s cubic-bezier(.21,.62,.34,1.48);
        }

        &:hover .todo-list__icon__large-rect {
          translate: -2% 2%;
          height: 40%;
        }
      }
    }
  }

  .add-list-item {
    justify-self: start;
    margin: 2rem 3.7rem 1rem 3.7rem;;
  }
}

